# cmake-examples

01-basic/A-hello-cmake/: CMakeLists.txt
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/B-hello-headers/include/: Hello.h
